[Windows] Loader is not properly determining supported MIME types https://bugs.webkit.org/show_bug.cgi?id=120383

Reviewed by Eric Carlson.

* WebCoreSupport/WebFrameLoaderClient.cpp:
(WebFrameLoaderClient::canShowMIMEType): Modify to ask WebView if it can
display the media type. Use new helper function to avoid converting a String
to BSTR, only to immediatly be converted from BSTR back to String.
(WebFrameLoaderClient::canShowMIMETypeAsHTML): Ditto.
* WebView.cpp:
(WebView::canShowMIMEType): Move logic to a new (similarly named) helper function.
(WebView::canShowMIMETypeAsHTML): Ditto.
* WebView.h: Add declaration for two new helper functions.


Canonical link: https://commits.webkit.org/138399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154759 268f45cc-cd09-0410-ab3c-d52691b4dbfc